Refactor tests. (#304)
Signed-off-by: Greg Allen <gallen@redhat.com>