@@ -30,6 +30,7 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
+import java.util.logging.Logger;
 
 import org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition;
 import org.jenkinsci.plugins.workflow.cps.Snippetizer;
@@ -56,16 +57,19 @@ import com.redhat.jenkins.plugins.ci.provider.data.ActiveMQSubscriberProviderDat
 import com.redhat.jenkins.plugins.ci.provider.data.ProviderData;
 
 import hudson.Util;
+import hudson.model.BooleanParameterDefinition;
 import hudson.model.FreeStyleBuild;
 import hudson.model.FreeStyleProject;
 import hudson.model.ParametersAction;
 import hudson.model.ParametersDefinitionProperty;
+import hudson.model.StringParameterDefinition;
 import hudson.model.TextParameterDefinition;
 import hudson.model.TextParameterValue;
 import hudson.model.queue.QueueTaskFuture;
 import hudson.tasks.Shell;
 
 public class AmqMessagingPluginIntegrationTest extends SharedMessagingPluginIntegrationTest {
+    private static final Logger log = Logger.getLogger(AmqMessagingPluginIntegrationTest.class.getName());
 
     @ClassRule
     public static DockerClassRule<ActiveMQContainer> docker = new DockerClassRule<>(ActiveMQContainer.class);
@@ -98,233 +102,51 @@ public class AmqMessagingPluginIntegrationTest extends SharedMessagingPluginInte
     }
 
     @Override
-    public ProviderData getSubscriberProviderData(String provider, String topic, String variableName, Boolean useFiles,
-            String selector, MsgCheck... msgChecks) {
-        return new ActiveMQSubscriberProviderData(provider, overrideTopic(topic), Util.fixNull(selector),
-                Arrays.asList(msgChecks), Util.fixNull(variableName, "CI_MESSAGE"), useFiles, 60);
+    public List<String> getFileNames() {
+        return List.of(DEFAULT_VARIABLE_NAME, DEFAULT_VARIABLE_NAME + "_HEADERS");
     }
 
     @Override
-    public ProviderData getPublisherProviderData(String provider, String topic, String properties, String content) {
-        return getPublisherProviderData(provider, topic, properties, content, 0);
+    public String getContainerId() {
+        return amq.getCid();
     }
 
-    public ProviderData getPublisherProviderData(String provider, String topic, String properties, String content,
+    @Override
+    public ProviderData getSubscriberProviderData(String provider, String topic, String variableName, Boolean useFiles,
+            MsgCheck... msgChecks) {
+        return getSubscriberProviderData(provider, topic, variableName, useFiles, null, msgChecks);
+    }
+
+    public ProviderData getSubscriberProviderData(String provider, String topic, String variableName, Boolean useFiles,
+            String selector, MsgCheck... msgChecks) {
+        return new ActiveMQSubscriberProviderData(provider, overrideTopic(topic), Util.fixNull(selector),
+                Arrays.asList(msgChecks), Util.fixNull(variableName, DEFAULT_VARIABLE_NAME), useFiles, 60);
+    }
+
+    public ProviderData getSubscriberProviderDataSelectorOnly(String selector) {
+        return getSubscriberProviderData(DEFAULT_PROVIDER_NAME, testName.getMethodName(), DEFAULT_VARIABLE_NAME, false,
+                selector);
+    }
+
+    @Override
+    public ProviderData getPublisherProviderData(String provider, String topic, String content) {
+        return getPublisherProviderData(provider, topic, content, null, 0);
+    }
+
+    public ProviderData getPublisherProviderData(String provider, String topic, String content, String properties) {
+        return getPublisherProviderData(provider, topic, content, properties, 0);
+    }
+
+    public ProviderData getPublisherProviderData(String provider, String topic, String content, String properties,
             int ttl) {
         return new ActiveMQPublisherProviderData(provider, overrideTopic(topic), properties, content, true, ttl);
     }
 
     @Test
-    public void testVerifyModelUIPersistence() throws Exception {
-        _testVerifyModelUIPersistence();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithTextArea() throws Exception {
-        _testSimpleCIEventTriggerWithTextArea("scott=123\ntom=456", "scott=123\ntom=456");
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithBooleanParam() throws Exception {
-        _testSimpleCIEventTriggerWithBoolParam("scott=123\ntom=456\ndryrun=true",
-                "{ \"scott\": \"123\", \"tom\": \"456\", \"dryrun\": true }", "dryrun is true, scott is 123");
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithChoiceParam() throws Exception {
-        _testSimpleCIEventTriggerWithChoiceParam("scott=123", "{}", "mychoice is scott");
-    }
-
-    @Test
-    public void testSimpleCIEventSubscribe() throws Exception {
-        _testSimpleCIEventSubscribe();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithDefaultValue() throws Exception {
-        _testSimpleCIEventTriggerWithDefaultValue();
-    }
-
-    @Test
-    public void testSimpleCIEventSubscribeWithCheck() throws Exception {
-        _testSimpleCIEventSubscribeWithCheck();
-    }
-
-    @Test
-    public void testSimpleCIEventSubscribeWithTopicOverride() throws Exception {
-        _testSimpleCIEventSubscribeWithTopicOverride();
-    }
-
-    @Test
-    public void testSimpleCIEventSubscribeWithCheckWithTopicOverride() throws Exception {
-        _testSimpleCIEventSubscribeWithCheckWithTopicOverride();
-    }
-
-    @Test
-    public void testSimpleCIEventSubscribeWithTopicOverrideAndVariableTopic() throws Exception {
-        _testSimpleCIEventSubscribeWithTopicOverrideAndVariableTopic();
-    }
-
-    @Test
-    public void testSimpleCIEventSubscribeWithCheckWithTopicOverrideAndVariableTopic() throws Exception {
-        _testSimpleCIEventSubscribeWithCheckWithTopicOverrideAndVariableTopic();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithPipelineSendMsg() throws Exception {
-        _testSimpleCIEventTriggerWithPipelineSendMsg();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithCheckWithPipelineSendMsg() throws Exception {
-        _testSimpleCIEventTriggerWithCheckWithPipelineSendMsg();
-    }
-
-    @Test
-    public void testSimpleCIEventTrigger() throws Exception {
-        _testSimpleCIEventTrigger();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithCheck() throws Exception {
-        _testSimpleCIEventTriggerWithCheck();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithCheckNoSquash() throws Exception {
-        _testSimpleCIEventTriggerWithCheckNoSquash();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithWildcardInSelector() throws Exception {
-        _testSimpleCIEventTriggerWithWildcardInSelector();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithRegExpCheck() throws Exception {
-        _testSimpleCIEventTriggerWithRegExpCheck();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithTopicOverride() throws Exception {
-        _testSimpleCIEventTriggerWithTopicOverride();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithMultipleTopics() throws Exception {
-        _testSimpleCIEventTriggerWithMultipleTopics();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithCheckWithTopicOverride() throws Exception {
-        _testSimpleCIEventTriggerWithCheckWithTopicOverride();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithTopicOverrideAndVariableTopic() throws Exception {
-        _testSimpleCIEventTriggerWithTopicOverrideAndVariableTopic();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithCheckWithTopicOverrideAndVariableTopic() throws Exception {
-        _testSimpleCIEventTriggerWithCheckWithTopicOverrideAndVariableTopic();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithParamOverride() throws Exception {
-        _testSimpleCIEventTriggerWithParamOverride();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerHeadersInEnv() throws Exception {
-        FreeStyleProject jobB = j.createFreeStyleProject();
-        String expected = "{\"CI_STATUS\":\"passed\",\"CI_NAME\":\"" + jobB.getName() + "\"";
-        _testSimpleCIEventTriggerHeadersInEnv(jobB, "CI_MESSAGE_HEADERS", expected);
-    }
-
-    @Test
-    public void testSimpleCIEventSubscribeWithNoParamOverride() throws Exception {
-        _testSimpleCIEventSubscribeWithNoParamOverride();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerOnPipelineJob() throws Exception {
-        _testSimpleCIEventTriggerOnPipelineJob();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithCheckOnPipelineJob() throws Exception {
-        _testSimpleCIEventTriggerWithCheckOnPipelineJob();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithPipelineWaitForMsg() throws Exception {
-        _testSimpleCIEventTriggerWithPipelineWaitForMsg();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithCheckWithPipelineWaitForMsg() throws Exception {
-        _testSimpleCIEventTriggerWithCheckWithPipelineWaitForMsg();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithSelectorWithCheckWithPipelineWaitForMsg() throws Exception {
-        _testSimpleCIEventTriggerWithSelectorWithCheckWithPipelineWaitForMsg();
-    }
-
-    @Test
-    public void testSimpleCIEventSendAndWaitPipeline() throws Exception {
-        WorkflowJob send = j.jenkins.createProject(WorkflowJob.class, "foo");
-        _testSimpleCIEventSendAndWaitPipeline(send, "message = abcdefg");
-    }
-
-    @Test
-    public void testSimpleCIEventSendAndWaitPipelineWithVariableTopic() throws Exception {
-        WorkflowJob send = j.jenkins.createProject(WorkflowJob.class, "foo");
-        _testSimpleCIEventSendAndWaitPipelineWithVariableTopic(send, "message = abcdefg");
-    }
-
-    @Test
-    public void testJobRename() throws Exception {
-        _testJobRename();
-    }
-
-    @Test
-    public void testJobRenameWithCheck() throws Exception {
-        _testJobRenameWithCheck();
-    }
-
-    @Test
-    public void testDisabledJobDoesNotGetTriggered() throws Exception {
-        _testDisabledJobDoesNotGetTriggered();
-    }
-
-    @Test
-    public void testDisabledJobDoesNotGetTriggeredWithCheck() throws Exception {
-        _testDisabledJobDoesNotGetTriggeredWithCheck();
-    }
-
-    @Test
-    public void testDisabledWorkflowJobDoesNotGetTriggered() throws Exception {
-        _testDisabledWorkflowJobDoesNotGetTriggered();
-    }
-
-    @Test
-    public void testEnsureFailedSendingOfMessageFailsBuild() throws Exception {
-        waitForProviderToStop(amq.getCid());
-        _testEnsureFailedSendingOfMessageFailsBuild();
-    }
-
-    @Test
-    public void testEnsureFailedSendingOfMessageFailsPipelineBuild() throws Exception {
-        waitForProviderToStop(amq.getCid());
-        _testEnsureFailedSendingOfMessageFailsPipelineBuild();
-    }
-
-    @Test
     public void testEnvVariablesWithPipelineWaitForMsg() throws Exception {
         WorkflowJob jobA = j.jenkins.createProject(WorkflowJob.class, "wait");
-        ProviderData pd = getSubscriberProviderData(testName.getMethodName(), "CI_MESSAGE_TEST", null);
+        ProviderData pd = getSubscriberProviderData(DEFAULT_PROVIDER_NAME, testName.getMethodName(), "CI_MESSAGE_TEST",
+                false);
         String postStatements = "echo \"CI_MESSAGE_TEST = \" + CI_MESSAGE_TEST  \n"
                 + "  if (env.CI_MESSAGE_TEST == null) {\n" + "    error(\"CI_MESSAGE_TEST not set\")\n" + "  }\n"
                 + "  echo \"CI_MESSAGE_TEST_HEADERS = \" + env.CI_MESSAGE_TEST_HEADERS  \n"
@@ -336,8 +158,8 @@ public class AmqMessagingPluginIntegrationTest extends SharedMessagingPluginInte
         scheduleAwaitStep(jobA);
 
         FreeStyleProject jobB = j.createFreeStyleProject();
-        jobB.getPublishersList().add(new CIMessageNotifier(
-                getPublisherProviderData(testName.getMethodName(), "TEST_PROPERTY = TEST_VALUE", "Hello World")));
+        jobB.getPublishersList().add(new CIMessageNotifier(getPublisherProviderData(DEFAULT_PROVIDER_NAME,
+                testName.getMethodName(), "Hello World", "TEST_PROPERTY = TEST_VALUE")));
 
         j.buildAndAssertSuccess(jobB);
 
@@ -350,45 +172,35 @@ public class AmqMessagingPluginIntegrationTest extends SharedMessagingPluginInte
     }
 
     @Test
-    public void testAbortWaitingForMessageWithPipelineBuild() throws Exception {
-        _testAbortWaitingForMessageWithPipelineBuild();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerOnPipelineJobWithGlobalEnvVarInTopic() throws Exception {
-        _testSimpleCIEventTriggerOnPipelineJobWithGlobalEnvVarInTopic();
-    }
-
-    @Test
-    public void testSimpleCIEventTriggerWithCheckOnPipelineJobWithGlobalEnvVarInTopic() throws Exception {
-        _testSimpleCIEventTriggerWithCheckOnPipelineJobWithGlobalEnvVarInTopic();
-    }
-
-    @Test
     public void testPipelineJobPropertiesMultipleProviders() throws Exception {
         List<Thread> leftoverFromPreviousRuns = getThreadsByName("ActiveMQ.*Task-.*");
         leftoverFromPreviousRuns.addAll(getThreadsByName("CIBuildTrigger.*"));
         for (Thread thread : leftoverFromPreviousRuns) {
+            log.severe("Trying to kill thread: " + thread.getName());
             thread.interrupt();
 
             for (int i = 0; getCurrentThreadCountForName(thread.getName()) != 0 && i < 50; i++) {
+                log.severe("    sleeping...");
                 Thread.sleep(200);
             }
         }
+        log.severe("Number of threads: " + getCurrentThreadCountForName("ActiveMQ.*Task-.*"));
+        assertEquals("ActiveMQ.*Task- count", 0, getCurrentThreadCountForName("ActiveMQ.*Task-.*"));
+        assertEquals("CIBuildTrigger count", 0, getCurrentThreadCountForName("CIBuildTrigger.*"));
 
         WorkflowJob jobB = j.jenkins.createProject(WorkflowJob.class, "send");
         jobB.addProperty(new ParametersDefinitionProperty(new TextParameterDefinition("CI_STATUS2", "", "")));
-        ProviderData pd = getPublisherProviderData(testName.getMethodName(), "CI_STATUS2 = ${CI_STATUS2}",
-                MESSAGE_CHECK_CONTENT);
+        ProviderData pd = getPublisherProviderData(DEFAULT_PROVIDER_NAME, testName.getMethodName(),
+                MESSAGE_CHECK_CONTENT, "CI_STATUS2 = ${CI_STATUS2}");
         jobB.setDefinition(new CpsFlowDefinition(buildSendCIMessageScript(pd), true));
 
         // [expectedValue: number + '0.0234', field: 'CI_STATUS2']
-        pd = getSubscriberProviderData(testName.getMethodName(), null, "CI_NAME = '" + jobB.getName() + "'");
+        pd = getSubscriberProviderData();
         CIBuildTrigger t = new CIBuildTrigger(false, Collections.singletonList(pd));
         JobPropertyStep s = new JobPropertyStep(
                 Collections.singletonList(new PipelineTriggersJobProperty(Collections.singletonList(t))));
         WorkflowJob jobA = j.jenkins.createProject(WorkflowJob.class, "receive");
-        jobA.addProperty(new ParametersDefinitionProperty(new TextParameterDefinition("CI_MESSAGE", "", "")));
+        jobA.addProperty(new ParametersDefinitionProperty(new TextParameterDefinition(DEFAULT_VARIABLE_NAME, "", "")));
         jobA.setDefinition(new CpsFlowDefinition("def number = currentBuild.getNumber().toString()\n"
                 + Snippetizer.object2Groovy(s) + "\nnode('built-in') {\n sleep 1\n}", true));
 
@@ -401,6 +213,11 @@ public class AmqMessagingPluginIntegrationTest extends SharedMessagingPluginInte
 
         j.buildAndAssertSuccess(jobA);
         waitForReceiverToBeReady(jobA.getDisplayName(), 3);
+
+        // Wait for threads to disappear.
+        for (int i = 0; i < 60 && getCurrentThreadCountForName("ActiveMQ.*Task-.*") > 1; i++) {
+            Thread.sleep(500);
+        }
         printThreadsWithName("ActiveMQ.*Task-.*");
         printThreadsWithName("CIBuildTrigger.*");
         assertEquals("ActiveMQ.*Task- count", 1, getCurrentThreadCountForName("ActiveMQ.*Task-.*"));
@@ -422,8 +239,7 @@ public class AmqMessagingPluginIntegrationTest extends SharedMessagingPluginInte
         assertEquals("ActiveMQ.*Task- count", 1, getCurrentThreadCountForName("ActiveMQ.*Task-.*"));
         assertEquals("CIBuildTrigger count", 1, getCurrentThreadCountForName("CIBuildTrigger.*"));
 
-        pd = getSubscriberProviderData(testName.getMethodName(), null, "CI_NAME = '" + jobB.getName() + "'",
-                new MsgCheck(MESSAGE_CHECK_FIELD, MESSAGE_CHECK_VALUE));
+        pd = getSubscriberProviderData(new MsgCheck(MESSAGE_CHECK_FIELD, MESSAGE_CHECK_VALUE));
         t = new CIBuildTrigger(false, Collections.singletonList(pd));
         s = new JobPropertyStep(
                 Collections.singletonList(new PipelineTriggersJobProperty(Collections.singletonList(t))));
@@ -453,26 +269,18 @@ public class AmqMessagingPluginIntegrationTest extends SharedMessagingPluginInte
     }
 
     @Test
-    public void testPipelineInvalidProvider() throws Exception {
-        _testPipelineInvalidProvider();
-    }
-
-    @Test
     public void testSimpleCIEventWithMessagePropertiesAsVariable() throws Exception {
         FreeStyleProject jobA = j.createFreeStyleProject();
         jobA.getBuildersList().add(new Shell("echo CI_STATUS = ${CI_STATUS}"));
         jobA.getBuildersList().add(new Shell("echo TEST_PROP1 = $TEST_PROP1"));
         jobA.getBuildersList().add(new Shell("echo TEST_PROP2 = $TEST_PROP2"));
-        attachTrigger(
-                new CIBuildTrigger(true, Collections
-                        .singletonList(getSubscriberProviderData("otopic", "CI_MESSAGE", "CI_STATUS = 'failed'"))),
-                jobA);
+        attachTrigger(new CIBuildTrigger(true, Collections.singletonList(getSubscriberProviderData("otopic"))), jobA);
 
         FreeStyleProject jobB = j.createFreeStyleProject();
         jobB.addProperty(new ParametersDefinitionProperty(new TextParameterDefinition("MESSAGE_PROPERTIES",
                 "CI_STATUS = failed\nTEST_PROP1 = GOT 1\nTEST_PROP2 = GOT 2", "")));
-        jobB.getBuildersList()
-                .add(new CIMessageBuilder(getPublisherProviderData("otopic", "${MESSAGE_PROPERTIES}", "")));
+        jobB.getBuildersList().add(new CIMessageBuilder(
+                getPublisherProviderData(DEFAULT_PROVIDER_NAME, "otopic", "", "${MESSAGE_PROPERTIES}")));
         j.buildAndAssertSuccess(jobB);
 
         waitUntilTriggeredBuildCompletes(jobA);
@@ -490,14 +298,12 @@ public class AmqMessagingPluginIntegrationTest extends SharedMessagingPluginInte
     @Test
     public void testTTL() throws Exception {
         FreeStyleProject jobA = j.createFreeStyleProject();
-        jobA.getBuildersList().add(new Shell("echo $CI_MESSAGE_HEADERS"));
-        attachTrigger(
-                new CIBuildTrigger(false,
-                        Collections.singletonList(getSubscriberProviderData(null, null, "CI_STATUS = 'failed'"))),
-                jobA);
+        jobA.getBuildersList().add(new Shell("echo $" + DEFAULT_VARIABLE_NAME + "_HEADERS"));
+        attachTrigger(new CIBuildTrigger(false, Collections.singletonList(getSubscriberProviderData())), jobA);
 
         FreeStyleProject jobB = j.createFreeStyleProject();
-        jobB.getPublishersList().add(new CIMessageNotifier(getPublisherProviderData(null, "CI_STATUS = failed", null)));
+        jobB.getPublishersList().add(new CIMessageNotifier(
+                getPublisherProviderData(DEFAULT_PROVIDER_NAME, testName.getMethodName(), null, "CI_STATUS = failed")));
 
         j.buildAndAssertSuccess(jobB);
         waitUntilTriggeredBuildCompletes(jobA);
@@ -505,8 +311,8 @@ public class AmqMessagingPluginIntegrationTest extends SharedMessagingPluginInte
         j.assertLogContains("\"JMSExpiration\":0", jobA.getLastBuild());
 
         jobB.getPublishersList().clear();
-        jobB.getPublishersList().add(new CIMessageNotifier(
-                getPublisherProviderData(DEFAULT_PROVIDER_NAME, null, "CI_STATUS = failed", null, 10000)));
+        jobB.getPublishersList().add(new CIMessageNotifier(getPublisherProviderData(DEFAULT_PROVIDER_NAME,
+                testName.getMethodName(), null, "CI_STATUS = failed", 10000)));
 
         j.buildAndAssertSuccess(jobB);
         waitUntilTriggeredBuildCompletes(jobA, 2);
@@ -519,32 +325,110 @@ public class AmqMessagingPluginIntegrationTest extends SharedMessagingPluginInte
     }
 
     @Test
-    public void testCITriggerWithFileParameter() throws Exception {
-        _testCITriggerWithFileParameter(List.of("CI_MESSAGE", "CI_MESSAGE_HEADERS"));
+    public void testSimpleCIEventTriggerHeadersInEnv() throws Exception {
+        FreeStyleProject jobA = j.createFreeStyleProject();
+        attachTrigger(
+                new CIBuildTrigger(false,
+                        Collections.singletonList(getSubscriberProviderDataSelectorOnly("CI_STATUS = 'passed'"))),
+                jobA);
+
+        // We are only checking that this shows up in the console output.
+        jobA.getBuildersList().add(new Shell("echo $" + DEFAULT_VARIABLE_NAME + "_HEADERS"));
+
+        FreeStyleProject jobB = j.createFreeStyleProject();
+        jobB.getPublishersList().add(new CIMessageNotifier(getPublisherProviderData(DEFAULT_PROVIDER_NAME,
+                testName.getMethodName(), "some irrelevant content", "CI_STATUS = passed")));
+
+        j.buildAndAssertSuccess(jobB);
+
+        waitUntilTriggeredBuildCompletes(jobA);
+        j.assertBuildStatusSuccess(jobA.getLastBuild());
+        j.assertLogContains("{\"CI_STATUS\":\"passed\",\"CI_NAME\":\"" + jobB.getName() + "\"", jobA.getLastBuild());
+
+        jobA.delete();
+        jobB.delete();
     }
 
     @Test
-    public void testWaitForCIMessageStepWithFiles() throws Exception {
-        _testWaitForCIMessageStepWithFiles(List.of("CI_MESSAGE", "CI_MESSAGE_HEADERS"));
+    public void testSimpleCIEventTriggerWithWildcardInSelector() throws Exception {
+        FreeStyleProject jobA = j.createFreeStyleProject();
+        attachTrigger(
+                new CIBuildTrigger(false, Collections.singletonList(
+                        getSubscriberProviderDataSelectorOnly("compose LIKE '%compose_id\": \"Fedora-Atomic%'"))),
+                jobA);
+        jobA.getBuildersList().add(new Shell("echo CI_STATUS = ${CI_STATUS}"));
+
+        FreeStyleProject jobB = j.createFreeStyleProject();
+        jobB.getPublishersList()
+                .add(new CIMessageNotifier(getPublisherProviderData(DEFAULT_PROVIDER_NAME, testName.getMethodName(), "",
+                        "CI_STATUS = failed\n compose = \"compose_id\": \"Fedora-Atomic-25-20170105.0\"")));
+
+        j.buildAndAssertSuccess(jobB);
+
+        waitUntilTriggeredBuildCompletes(jobA);
+        j.assertBuildStatusSuccess(jobA.getLastBuild());
+        j.assertLogContains("echo CI_STATUS = failed", jobA.getLastBuild());
+
+        jobA.delete();
+        jobB.delete();
     }
 
     @Test
-    public void testWaitForCIMessagePipelineWithFiles() throws Exception {
-        _testWaitForCIMessagePipelineWithFiles(List.of("CI_MESSAGE", "CI_MESSAGE_HEADERS"));
+    public void testSimpleCIEventTriggerWithParamOverride() throws Exception {
+        FreeStyleProject jobA = j.createFreeStyleProject();
+        attachTrigger(
+                new CIBuildTrigger(false,
+                        Collections.singletonList(getSubscriberProviderDataSelectorOnly("CI_STATUS = 'failed'"))),
+                jobA);
+
+        jobA.addProperty(
+                new ParametersDefinitionProperty(new StringParameterDefinition("PARAMETER", "bad parameter value", ""),
+                        new StringParameterDefinition("status", "unknown status", "")));
+        jobA.getBuildersList().add(new Shell("echo $PARAMETER"));
+        jobA.getBuildersList().add(new Shell("echo $" + DEFAULT_VARIABLE_NAME));
+        jobA.getBuildersList().add(new Shell("echo status::$status"));
+
+        FreeStyleProject jobB = j.createFreeStyleProject();
+        jobB.getPublishersList().add(new CIMessageNotifier(getPublisherProviderData(DEFAULT_PROVIDER_NAME,
+                testName.getMethodName(), "This is my content with ${COMPOUND} ${BUILD_STATUS}",
+                "CI_STATUS = failed\nPARAMETER = my parameter\nstatus=${BUILD_STATUS}\nCOMPOUND = Z${PARAMETER}Z")));
+
+        j.buildAndAssertSuccess(jobB);
+
+        waitUntilTriggeredBuildCompletes(jobA);
+        FreeStyleBuild lastBuild = jobA.getLastBuild();
+        j.assertBuildStatusSuccess(lastBuild);
+        j.assertLogContains("status::SUCCESS", lastBuild);
+        j.assertLogContains("my parameter", lastBuild);
+        j.assertLogContains("This is my content with Zmy parameterZ SUCCESS", lastBuild);
+
+        jobA.delete();
+        jobB.delete();
     }
 
     @Test
-    public void testCITriggerWithMessageTooLong() throws Exception {
-        _testCITriggerWithMessageTooLong();
-    }
+    public void testSimpleCIEventTriggerWithBoolParam() throws Exception {
+        WorkflowJob jobA = j.jenkins.createProject(WorkflowJob.class, "foo");
+        jobA.setDefinition(
+                new CpsFlowDefinition("node('built-in') {\n echo \"dryrun is $dryrun, scott is $scott\"\n}", true));
+        jobA.addProperty(new ParametersDefinitionProperty(new StringParameterDefinition(DEFAULT_VARIABLE_NAME, "", ""),
+                new BooleanParameterDefinition("dryrun", false, ""), new StringParameterDefinition("scott", "", "")));
+        attachTrigger(new CIBuildTrigger(false, Collections.singletonList(getSubscriberProviderData())), jobA);
 
-    @Test
-    public void testWaitForCIMessageStepWithMessageTooLong() throws Exception {
-        _testWaitForCIMessageStepWithMessageTooLong();
-    }
+        FreeStyleProject jobB = j.createFreeStyleProject();
 
-    @Test
-    public void testWaitForCIMessagePipelineWithMessageTooLong() throws Exception {
-        _testWaitForCIMessagePipelineWithMessageTooLong();
+        jobB.getPublishersList()
+                .add(new CIMessageNotifier(getPublisherProviderData(DEFAULT_PROVIDER_NAME, testName.getMethodName(),
+                        "{ \"scott\": \"123\", \"tom\": \"456\", \"dryrun\": true }",
+                        "scott=123\ntom=456\ndryrun=true")));
+
+        j.buildAndAssertSuccess(jobB);
+
+        waitUntilTriggeredBuildCompletes(jobA);
+        j.assertBuildStatusSuccess(jobA.getLastBuild());
+        j.assertLogContains("dryrun is true, scott is 123", jobA.getLastBuild());
+
+        jobA.delete();
+        jobB.delete();
     }
 }
